# casadi-on-gpu

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
codegen/: fk_eval.casadi  generate_dynamics_cuda.ipynb  generate_fk.ipynb  generate_fk_cuda.ipynb
demos/: dynamics_example.ipynb  dynamics_main.cpp  kinematics_example.ipynb  kinematics_main.cpp
examples/: dynamics_example.ipynb  kinematics_example.ipynb
examples/assets/: dynamics_eval.casadi  fk_eval.casadi
python/: dynamics_example.ipynb  kinematics_example.ipynb
src/: fk_alpha.h  fk_wrapper.cuh  main.cu
src/kernels/: dynamics_main.cu
src/python/: casadi_on_gpu_api.h  casadi_on_gpu_bindings.cpp  casadi_on_gpu_kernel_registry.cu  casadi_on_gpu_kernel_registry.h  casadi_on_gpu_kernels.cu
tests/: test_smoke.py
tools/: clean_dev_artifacts.sh  generate_manifest_and_registry.py
